# procviz

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  install.ps1  install.sh  pyproject.toml  start.bat  start.sh
api/: routes.py
connectors/: teradata.py
docs/: user-guide.md
docs/prompts/: procviz-kickstart.md
docs/summaries/: procviz-project-summary.md
docs/superpowers/plans/: 2026-04-15-procviz-phase1.md
docs/superpowers/specs/: 2026-04-15-procviz-phase1-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DetailModal.tsx  DetailPanel.tsx  DiagramView.tsx  ExportMenu.tsx  Legend.tsx  TreeSidebar.tsx
frontend/src/hooks/: useDatabases.ts  useDataflow.ts  useObjects.ts
frontend/src/types/: cytoscape-dagre.d.ts  graph.ts
graph/: builder.py
models/: schemas.py
parsers/: sql_parser.py
tests/: test_graph_builder.py  test_routes.py  test_schemas.py  test_sql_parser.py
